Resolve PDSEN-361: Fixed to correctly retrieve the correct base uri. This fixes the issue where this method returns a uri with a 'file' protocol even if the given uri being passed in has an 'http' protocol.